[JS] background-image

--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 .nameForm,
-.greeting
-{
-    display:none;
-} 
+.greeting {
+  display: none;
+}
 
-.showing{
-    display:block;
+.showing {
+  display: block;
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  width: 100vw;
+  height: 100vh;
 }
